feat(gdx): consolidate certified frontend migration